fix clipping

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -10,6 +10,7 @@
 
 .main-contents {
     margin-left: 250px;
+    width: inherit;
 }
 
 #mysidebar {
